# ChangeLog for dev-python/epydoc
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/epydoc/ChangeLog,v 1.32 2008/01/18 00:29:43 pythonhead Exp $

  18 Jan 2008; Rob Cakebread <pythonhead@gentoo.org>
  epydoc-3.0_beta1.ebuild:
  Version bump. Closes #151314 Thanks Rene 'Necoro' Neumann <necoro@necoro.net>

  17 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org> -epydoc-1.1.ebuild,
  -epydoc-2.0.ebuild, -epydoc-2.1.ebuild, -epydoc-2.1-r1.ebuild:
  Dropped old versions.

  16 Jul 2007; Raúl Porcel <armin76@gentoo.org> epydoc-2.1-r2.ebuild:
  alpha stable

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> epydoc-2.1-r2.ebuild:
  x86 stable

  11 Feb 2007; Markus Rothe <corsair@gentoo.org> epydoc-2.1-r2.ebuild:
  Stable on ppc64; bug #166118

  11 Feb 2007; Joseph Jezak <josejx@gentoo.org> epydoc-2.1-r2.ebuild:
  Marked ppc stable for bug #166118.

  10 Feb 2007; Simon Stelling <blubb@gentoo.org> epydoc-2.1-r2.ebuild:
  stable on amd64; bug 166118

  09 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> epydoc-2.1-r2.ebuild:
  Stable on sparc

  20 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org> epydoc-2.1-r2.ebuild:
  Stable on MIPS.

  07 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org> epydoc-2.1-r2.ebuild:
  Marked ~mips.

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> epydoc-2.1-r2.ebuild:
  Add ~sparc-fbsd keyword.

  03 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> epydoc-2.1-r2.ebuild:
  Add ~x86-fbsd keyword.

  01 Dec 2006; Markus Rothe <corsair@gentoo.org> epydoc-2.1-r2.ebuild:
  Added ~ppc64; bug #156751

  15 Nov 2006; Jeroen Roovers <jer@gentoo.org> epydoc-2.1-r2.ebuild:
  Stable for HPPA.

  30 Jan 2006; Patrick McLean <chutzpah@gentoo.org> epydoc-2.1-r2.ebuild:
  Added to ~amd64 (bug #98196).

  19 Nov 2005; Chris White <chriswhite@gentoo.org> metadata.xml:
  Added japanese metadata.xml translation thanks to Yoshino-san.

*epydoc-2.1-r2 (18 Sep 2005)
