@@ -1,6 +1,6 @@
 DIST epydoc-2.1.tar.gz 529943 RMD160 50b8a546cf22acd82e7ccbc3f5a8dc111534b5cf SHA1 f2034c5e1b9cf0d2d16e0b9c8af0d3581af524e4 SHA256 cf1e915810f7b34c1315a41e9aa82b570ab2a7f49edbdbaaec4725e8d543c04a
 DIST epydoc-3.0beta1.tar.gz 1706356 RMD160 f38674260363c45869cb5e4b33f50ef617e05115 SHA1 676d3b9564993d00b297b8cd2932a31ea6b227fe SHA256 a3cebf0c021c609de9a0fe692addf35d88c9a02ad84f87ab22e3b73151455db8
-EBUILD epydoc-2.1-r2.ebuild 717 RMD160 1b3bc5f75f07b55febbe601842c13e10ea8f6c06 SHA1 8c9a069c7f0fdbb2b80a5dd642d584453aa7d66c SHA256 34212706529a628b8fac25d8c3908df2ec73d09e6c3d048f5b742fe8dbef8265
-EBUILD epydoc-3.0_beta1.ebuild 821 RMD160 966c4950c452e9fec0626e0dae3df650ed07bb02 SHA1 d7f692076f292cef27f4636bfb3e8d27c862d8a8 SHA256 e6c5609736ee4ef79c733387315883de0a188badf705b3551cd56fff772421c2
-MISC ChangeLog 3371 RMD160 c410afd3d4109c7c5f22ba8743e63239b868e67e SHA1 56edab26d2a5ba578b87ef3de8905399c85ca2ac SHA256 4e66ae7526874099dcc21efcbc3faeaa0e6bd0dbb1a19086cf973894f0707e7a
+EBUILD epydoc-2.1-r2.ebuild 714 RMD160 c04cf537b6dc8e488028521acd6c7b532f491741 SHA1 0155b008bf8718bf0e893912136504526d9840e6 SHA256 446d2e0397f3a869f995f58eaba599caba1506a438742327b0871ddaea59b556
+EBUILD epydoc-3.0_beta1.ebuild 819 RMD160 a0b73fddf75315979b5d24adc36a71e2ec02426e SHA1 5dbef155797784771e2d1ded5b821592a58ac761 SHA256 5267807d2a424dbe43151ff44f70b99d8a510877fe13f7a78cc447c7bccd9dae
+MISC ChangeLog 3579 RMD160 5a385034522122b703c4e413a5dcdb92e9e9ded2 SHA1 ec19f249883f11ce93353cc72670e02bdbb40f4f SHA256 90b86cd2f2ee37ccdd4b5efb43f25a0243df636c9a2cf70d62275cfad9d3626a
 MISC metadata.xml 1070 RMD160 50fbf351b06775908755ae4436d6352cd5ffdbf3 SHA1 5b01cd363e28a60f952c23954e7f12b882e482ed SHA256 34074c2fb16e86fbf182512c108afebe0c24fc143bb69044028bfa4e7dc2cb7a
