@@ -1,9 +1,15 @@
 # ChangeLog for dev-python/epydoc
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/epydoc/ChangeLog,v 1.32 2008/01/18 00:29:43 pythonhead Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/epydoc/ChangeLog,v 1.33 2008/01/20 23:04:50 lucass Exp $
+
+  20 Jan 2008; Lukasz Strzygowski <lucass@gentoo.org> epydoc-2.1-r2.ebuild,
+  epydoc-3.0_beta1.ebuild:
+  Fixed invalid quoting (bug #206804). Fixed previous entry in ChangeLog.
+
+*epydoc-3.0_beta1 (18 Jan 2008)
 
   18 Jan 2008; Rob Cakebread <pythonhead@gentoo.org>
-  epydoc-3.0_beta1.ebuild:
+  +epydoc-3.0_beta1.ebuild:
   Version bump. Closes #151314 Thanks Rene 'Necoro' Neumann <necoro@necoro.net>
 
   17 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org> -epydoc-1.1.ebuild,
